# bagatellen

c++/clang/probe/1/loop-convert/: CMakeLists.txt  LoopConvert.cpp  Makefile  errors
c++/clang/probe/2/probe/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  errors  probe.cpp
c++/clang/probe/2/probe/autom4te.cache/: output.0  requests  traces.0  traces.1
c/grjsonplplot/: Makefile.am  README.md  configuration.c  configuration.h  configure.ac  data.c  data.h  main.c  options.c  options.h
c/grplot/: Makefile.am  axis.c  axis.h  axis_output.c  axis_output.h  color_diff.c  color_diff.h  diagram.c  diagram.h  grplot.ggo  input.c  input.h  input_buf.c  input_buf.h  input_buf_by_mgmt.c  input_buf_by_mgmt.h  input_buf_mgmt.c  input_buf_mgmt.h  inscription.c  inscription.h  json.c  json.h  legend.c  legend.h  main.c  matrix.c  matrix.h  model.mp  output_buf_by_mgmt.c  output_buf_by_mgmt.h  report_imlib_load_error.c  report_imlib_load_error.h  sample.data
c/grplot/samples/: doit.sh  knuff
c/grplot/samples/1/: charts.py  schema.json
c/icor/: AUTHORS  Doxyfile  Makefile.am  README  README.md  cmdline.c  cmdline.h  configure.ac  icor.c  icor.h  main.c
c/threads/: Makefile  flowctrl.c  flowctrl.h  flowctrl2.c  flowctrl2.h  main.c  probe_1.lua  probe_2.lua  rwlock.c  rwlock.h  semaphore.c  semaphore.h  tsp.c  tsp.h
java/ProbeUnify2/: 1.der  eq.pel  group.pel  pom.xml  ring.pel
java/ProbeUnify3/: pom.xml
java/ProbeUnifyFrontend1/: FUTURE.md  eq.pel  group.pel  pom.xml  ring.pel
java/interpolation/: pom.xml
java/lagrange/: pom.xml
java/multiplexer/: pom.xml
java/pph/: pom.xml
lua/: base-0.0.1-001.rockspec  get_cyrillic-0.0.1-001.rockspec  logics-0.0.1-001.rockspec  redland-0.0.1-001.rockspec  url_encode-0.0.1-001.rockspec
lua/base/: Indentation.lua  config.lua
lua/file/: Line.lua  Position.lua  PositionStack.lua  SequentialRead.lua
lua/redland/: BlankNode.lua  Formatter.lua  Hash.lua  LiteralNode.lua  Model.lua  Node.lua  Parser.lua  Query.lua  Results.lua  Serializer.lua  Stmt.lua  Store.lua  Stream.lua  Transaction.lua  Uri.lua  UriNode.lua  World.lua  test.lua  uri.lua
lua/test/: test_uritemplate.lua
lua/utils/: beautiful_output.lua  digit_accu.lua  regex_quote.lua
poly/collections/: dicts.fun  dicts.sig  dictset.fun  dictset.ml  list.ml  option.ml  set.ml  sets.fun  sets.sig
poly/logics/: constructors.sig  literals.sig  variable_contexts.sig  variables.sig  variables_depending_thing.sig
python/: cal.py
python/dctbnbc/: bad.json  bad_sites.json  dctbnbc.json  doit.sh  evaluate_ranking.awk  good_sites.json  good_test.json  other_sites.json  setup.py
sml/: cat.sig  probe_2.5.ml  probe_2.ml  probe_3.ml  probe_4.ml  probe_5.ml  probe_6.ml  probe_rec.sml
sml/collections/: acc.sig  all_zip.sig  combi_pointered_type.fun  combi_type.sig  combi_type.sml  dict_map.fun  dict_map.sig  dicts.fun  dicts.sig  dictset.fun  dictset.ml  dictset.sig  double_all_zip.fun  double_pointered_type_extended.sig  double_polymorphic_container_type.sig  eqs.sig  naming_pointer_type.fun  naming_pointered_type.fun  naming_pointered_type.sig  naming_pointered_type_extension.fun  naming_pointered_type_extension.sig  naming_pointered_type_generating.sig  naming_polymorphic_container_type.sig  naming_polymorphic_pointer_type.sml  naming_polymorphic_pointered_type.sml  occurences.fun  occurences.sig  onpt.fun  onpt.sig  pointer_type.fun  pointer_type.sig  pointered_type.fun  pointered_type.sig  pointered_type_extended.sig  pointered_type_generating.sig  polymorphic_container_type.sig  polymorphic_pointer_type.sig  polymorphic_pointered_type.sig  qualified_occurences.sig  sets.fun  (+16 more)
sml/general/: base_binary_relation.sig  base_compose_map.fun  base_map.fun  base_map.sig  base_map_extension.fun  base_map_extension.sig  compose_map.sig  double_map.fun  double_map.sig  double_structure.sig  iterations.sml  map.sig  monoid.sig  pair.fun  pair_compose_map.fun  pair_map.fun  pair_map_extension.fun  pair_map_extension.sig  pair_type.fun  pair_type.sig  structure.sig  sum_compose_map.fun  sum_map_extension.fun  sum_map_extension.sig  sum_type.fun  sum_type.sig  type.sig  type_binary_relation.sig
sml/logics/: clauses.sig  construction.sig  constructors.sig  contected_literals.sig  contecteds.sig  double_variable_structure.fun  double_variable_structure.sig  literal_sets.sig  literals.sig  literals_structure.sig  literals_variable_occurences.sig  occurences.sig  pointer_type.sig  pprint.sig  (+10 more)
(+881 files in other folders)
