bin_PROGRAMS=grplot
grplot_SOURCES= \
   axis.c \
   axis_output.c \
   cmdline.c \
   color_diff.c \
   diagram.c \
   input.c \
   input_buf_by_mgmt.c \
   input_buf.c \
   input_buf_mgmt.c \
   inscription.c \
   json.c \
   legend.c \
   main.c \
   matrix.c \
   output_buf_by_mgmt.c \
   report_imlib_load_error.c
grplot_CPPFLAGS=$(MAIN_CFLAGS)
grplot_LDADD=$(MAIN_LIBS) -lm
